fixed css overflow

--- a/src/components/Nav/NewNavbar/Navbar.scss
+++ b/src/components/Nav/NewNavbar/Navbar.scss
@@ -42,6 +42,14 @@
 			}
 			.name {
 				text-align: center;
+				display: flex;
+				gap: 20px;
+				justify-content: center;
+
+				@media (max-width: 500px) {
+					flex-direction: column;
+				}
+
 				span {
 					min-width: 15px;
 				}
